--- a/package.json
+++ b/package.json
@@ -6,16 +6,22 @@
   "types": "./lib/esm/index.d.ts",
   "license": "MIT",
   "scripts": {
-    "build": "yarn build:esm && yarn build:cjs",
+    "build": "rm -rf lib && yarn build:esm && yarn build:cjs",
     "build:esm": "tsc",
     "build:cjs": "tsc --module commonjs --outDir lib/cjs",
-    "dev": "tsc -w"
+    "dev": "tsc -w",
+    "test": "jest"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@types/jest": "^29.0.3",
     "@types/react": "^16.8.0",
     "@types/react-dom": "^16.8.0",
+    "jest": "^29.0.3",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
+    "ts-jest": "^29.0.1",
     "typescript": "^4.8.3"
   },
   "peerDependencies": {
