--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
     "ts-jest": "^29.0.1",
+    "ts-node": "^10.9.1",
     "typescript": "^4.8.3"
   },
   "peerDependencies": {
