--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@absmartly/react-sdk",
-  "version": "1.1.0",
+  "version": "1.1.4",
   "homepage": "https://github.com/absmartly/react-sdk#README.md",
   "bugs": "https://github.com/absmartly/react-sdk/issues",
   "keywords": [
@@ -32,10 +32,10 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
+    "@types/core-js": "^2.5.5",
     "@types/jest": "^29.0.3",
     "@types/react": "^16.8.0",
     "@types/react-dom": "^16.8.0",
-    "core-js": "^3.25.3",
     "jest": "^29.0.3",
     "jest-environment-jsdom": "^29.0.3",
     "react": "^16.8.0",
@@ -49,7 +49,8 @@
     "react-dom": ">=16.8.0"
   },
   "dependencies": {
-    "@absmartly/javascript-sdk": "^1.10.0"
+    "@absmartly/javascript-sdk": "^1.10.0",
+    "core-js": "^3.26.0"
   },
   "publishConfig": {
     "access": "public"
