--- a/package.json
+++ b/package.json
@@ -38,8 +38,8 @@
     "@types/react-dom": "^16.8.0",
     "jest": "^29.0.3",
     "jest-environment-jsdom": "^29.0.3",
-    "react": "^16.8.0",
-    "react-dom": "^16.8.0",
+    "react": "18.2",
+    "react-dom": "18.2",
     "ts-jest": "^29.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.3"
