--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "module": "./lib/esm/index.js",
   "types": "./lib/esm/index.d.ts",
   "scripts": {
-    "build": "rm -rf lib && yarn build:esm && yarn build:cjs",
+    "build": "yarn test && rm -rf lib && yarn build:esm && yarn build:cjs",
     "prepack": "yarn -s upgrade && yarn -s build",
     "build:esm": "tsc",
     "build:cjs": "tsc --module commonjs --outDir lib/cjs",
@@ -34,8 +34,8 @@
     "@testing-library/user-event": "^14.4.3",
     "@types/core-js": "^2.5.5",
     "@types/jest": "^29.2.3",
-    "@types/react": "^18.0.25",
-    "@types/react-dom": "^18.0.9",
+    "@types/react": "^18.2.38",
+    "@types/react-dom": "^18.2.17",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
     "react": "18.2",
@@ -49,8 +49,7 @@
     "react-dom": ">=16.8.0"
   },
   "dependencies": {
-    "@absmartly/javascript-sdk": "~1.11.0",
-    "core-js": "^3.26.0"
+    "@absmartly/javascript-sdk": "^1.13.1"
   },
   "publishConfig": {
     "access": "public"
