--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@absmartly/react-sdk",
-  "version": "1.2.3",
+  "version": "1.2.4",
   "homepage": "https://github.com/absmartly/react-sdk#README.md",
   "bugs": "https://github.com/absmartly/react-sdk/issues",
   "keywords": [
@@ -49,7 +49,7 @@
     "react-dom": ">=16.8.0"
   },
   "dependencies": {
-    "@absmartly/javascript-sdk": "^1.10.0",
+    "@absmartly/javascript-sdk": "~1.11.0",
     "core-js": "^3.26.0"
   },
   "publishConfig": {
