--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,5 +19,6 @@
     "allowSyntheticDefaultImports": true
   },
   "include": ["src"],
-  "exclude": ["node_modules", "lib"]
+  "exclude": ["node_modules", "lib"],
+  "typeRoots": ["node_modules/@types", "src/**/*.d.ts"]
 }
