--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@absmartly/react-sdk",
-  "version": "1.2.7",
+  "version": "1.3.0",
   "homepage": "https://github.com/absmartly/react-sdk#README.md",
   "bugs": "https://github.com/absmartly/react-sdk/issues",
   "keywords": [
@@ -26,7 +26,9 @@
     "build:esm": "tsc",
     "build:cjs": "tsc --module commonjs --outDir lib/cjs",
     "dev": "tsc -w",
-    "test": "jest --coverage"
+    "test": "jest --coverage",
+    "format": "prettier --write .",
+    "check-format": "prettier --check ."
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -38,6 +40,7 @@
     "@types/react-dom": "^18.2.19",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
+    "prettier": "3.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "ts-jest": "^29.0.1",
@@ -49,7 +52,7 @@
     "react-dom": ">=16.8.0"
   },
   "dependencies": {
-    "@absmartly/javascript-sdk": "~1.11.0",
+    "@absmartly/javascript-sdk": "^1.13.0",
     "core-js": "^3.26.0"
   },
   "publishConfig": {
