--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,14 +15,19 @@ jobs:
         node-version: [16.x, 18.x, 20.x]
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Node.js (${{ matrix.node-version }})
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'yarn'
 
-      - name: Install dependencies
+      - name: Install dependencies (Node 16.x)
+        if: matrix.node-version == '16.x'
+        run: yarn install --frozen-lockfile --ignore-engines
+
+      - name: Install dependencies (Node 18.x and 20.x)
+        if: matrix.node-version != '16.x'
         run: yarn install --frozen-lockfile
 
       - name: Check format
