--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.3.0",
   "homepage": "https://github.com/absmartly/react-sdk#README.md",
   "bugs": "https://github.com/absmartly/react-sdk/issues",
+  "type": "module",
   "keywords": [
     "absmartly",
     "ab-smartly",
@@ -26,26 +27,25 @@
     "build:esm": "tsc",
     "build:cjs": "tsc --module commonjs --outDir lib/cjs",
     "dev": "tsc -w",
-    "test": "jest --coverage",
+    "test": "vitest --coverage",
     "format": "prettier --write .",
     "check-format": "prettier --check ."
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/jest-dom": "^6.4.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/core-js": "^2.5.5",
-    "@types/jest": "^29.2.3",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
-    "jest": "^29.3.1",
-    "jest-environment-jsdom": "^29.3.1",
+    "@vitest/coverage-v8": "^1.6.0",
+    "jsdom": "^24.1.0",
     "prettier": "3.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "ts-jest": "^29.0.1",
     "ts-node": "^10.9.1",
-    "typescript": "^4.8.3"
+    "typescript": "^4.8.3",
+    "vitest": "^1.6.0"
   },
   "peerDependencies": {
     "react": ">=16.8.0",
