--- a/package.json
+++ b/package.json
@@ -27,23 +27,26 @@
     "build:cjs": "tsc --module commonjs --outDir lib/cjs",
     "dev": "tsc -w",
     "test": "vitest --coverage",
+    "test:ui": "vitest --ui",
     "format": "prettier --write .",
     "check-format": "prettier --check ."
   },
   "devDependencies": {
+    "@testing-library/dom": "^10.1.0",
     "@testing-library/jest-dom": "^6.4.5",
-    "@testing-library/react": "^13.4.0",
+    "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/core-js": "^2.5.5",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "@vitest/coverage-v8": "^1.6.0",
+    "@vitest/ui": "^1.6.0",
     "jsdom": "^24.1.0",
-    "prettier": "3.2.5",
+    "prettier": "^3.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "ts-node": "^10.9.1",
-    "typescript": "^4.8.3",
+    "typescript": "^5.4.5",
     "vitest": "^1.6.0"
   },
   "peerDependencies": {
