--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,10 +4,12 @@
     "allowJs": true,
     "module": "esnext",
     "target": "es5",
-    "lib": ["es6", "dom", "es2016", "es2017"],
-    "jsx": "react",
+    "lib": ["es6", "dom", "dom.iterable", "es2016", "es2017", "es2022"],
+    "noImplicitOverride": true,
+    "jsx": "react-jsx",
     "declaration": true,
     "moduleResolution": "node",
+    "resolveJsonModule": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "esModuleInterop": true,
@@ -15,10 +17,14 @@
     "noImplicitThis": true,
     "noImplicitAny": true,
     "strictNullChecks": true,
-    "suppressImplicitAnyIndexErrors": true,
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "skipLibCheck": true,
+    "strict": true,
+    "noUncheckedIndexedAccess": true,
+    "sourceMap": true,
+    "declarationMap": true
   },
-  "include": ["src"],
+  "include": ["src", "tests"],
   "exclude": ["node_modules", "lib"],
   "typeRoots": ["node_modules/@types", "src/**/*.d.ts"]
 }
