feat: allow context to be passed as null

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,6 @@
     "declarationMap": true
   },
   "include": ["src", "tests"],
-  "exclude": ["node_modules", "lib"],
+  "exclude": ["node_modules", "lib", "tests"],
   "typeRoots": ["node_modules/@types", "src/**/*.d.ts"]
 }
